--- a/Front-End/arik_portfolio_template/styles/style.css
+++ b/Front-End/arik_portfolio_template/styles/style.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 300;
   font-style: normal;
   font-variation-settings: "wdth" 100;
   background-color: rgb(14, 14, 14);
@@ -35,6 +35,25 @@ a {
 a img {
   transform: rotate(-120deg);
   background-color: #343330;
+}
+
+p {
+  font-weight: 300;
+  line-height: 1.6;
+  letter-spacing: 1.3px;
+  font-size: 1rem;
+  margin-top: 0.8rem;
+  opacity: 0.8;
+}
+
+h3 {
+  font-size: 3rem;
+  font-weight: 300;
+}
+
+h4 {
+  font-weight: 400;
+  opacity: 0.9;
 }
 
 .hero-section {
@@ -169,13 +188,6 @@ a img {
 .services-section .service-label {
   font-weight: 300;
 }
-.services-section p {
-  font-weight: 300;
-  line-height: 1.6;
-  letter-spacing: 1.3px;
-  font-size: 0.9rem;
-  margin-top: 0.8rem;
-}
 .services-section a {
   margin-top: 1.7rem;
 }
@@ -232,7 +244,105 @@ a img {
   background-image: url(../assets/mobile.jpg);
 }
 
+.process-section {
+  padding: 0px 5%;
+  margin: 5rem 0;
+}
+.process-section .process-heading {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.testimonial-section {
+  text-align: center;
+  padding: 0px 5%;
+  margin: 5rem 0;
+}
+.testimonial-section .heading {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+.testimonial-section .heading p br {
+  display: none;
+}
+.testimonial-section .testimonial-items {
+  margin: 2rem 0;
+  text-align: left;
+  display: grid;
+  gap: 2.5rem;
+}
+.testimonial-section .testimonial-items .testimonial-card {
+  border: 0.5px solid #343330;
+  padding: 2rem;
+  background-color: hsl(30, 4%, 9%);
+  border-radius: 1px;
+}
+.testimonial-section .testimonial-items .testimonial-card .logo {
+  margin-bottom: 1rem;
+}
+.testimonial-section .testimonial-items .testimonial-card .label {
+  font-weight: 300;
+}
+.testimonial-section .testimonial-items .testimonial-card .intru {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.testimonial-section .testimonial-items .testimonial-card .intru img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.testimonial-section .testimonial-items .testimonial-card .intru .name {
+  line-height: 1.5;
+}
+.testimonial-section .testimonial-items .testimonial-card .intru .name .company {
+  font-weight: 100;
+}
+
+footer {
+  padding: 0px 5%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+footer h2 {
+  margin-top: 1rem;
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+footer p br {
+  display: none;
+}
+footer button {
+  background-color: #f5deb3;
+  color: rgb(14, 14, 14);
+  text-transform: uppercase;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.7rem 1rem;
+  text-align: center;
+  border: none;
+  letter-spacing: 1.9px;
+  margin: 0 auto;
+}
+footer .copy-rights {
+  font-size: 0.9rem;
+  opacity: 0.7;
+}
+
 @media (min-width: 1020px) {
+  h3 {
+    font-size: 4rem;
+  }
   .hero-section img {
     width: 34%;
   }
@@ -261,5 +371,28 @@ a img {
   }
   .works-section .work-items {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .process-section .process-heading {
+    gap: 3.5rem;
+  }
+  .process-section .process-heading p {
+    font-size: 1.2rem;
+  }
+  .testimonial-section .heading p br {
+    display: block;
+  }
+  .testimonial-section .testimonial-items {
+    padding: 0px 3%;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  footer h2 {
+    font-size: 7rem;
+  }
+  footer p {
+    font-size: 1.4rem;
+    line-height: 1.4;
+  }
+  footer p br {
+    display: block;
   }
 }/*# sourceMappingURL=style.css.map */
