--- a/Front-End/arik_portfolio_template/styles/style.scss
+++ b/Front-End/arik_portfolio_template/styles/style.scss
@@ -18,7 +18,7 @@ body {
   width: 100%;
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 300;
   font-style: normal;
   font-variation-settings: "wdth" 100;
   background-color: $bg-color;
@@ -41,6 +41,22 @@ a {
     transform: rotate(-120deg);
     background-color: #343330;
   }
+}
+p {
+  font-weight: 300;
+  line-height: 1.6;
+  letter-spacing: 1.3px;
+  font-size: 1rem;
+  margin-top: 0.8rem;
+  opacity: 0.8;
+}
+h3 {
+  font-size: 3rem;
+  font-weight: 300;
+}
+h4 {
+  font-weight: 400;
+  opacity: 0.9;
 }
 .hero-section {
   width: 100%;
@@ -177,14 +193,6 @@ a {
   .service-label {
     font-weight: 300;
   }
-
-  p {
-    font-weight: 300;
-    line-height: 1.6;
-    letter-spacing: 1.3px;
-    font-size: 0.9rem;
-    margin-top: 0.8rem;
-  }
   a {
     margin-top: 1.7rem;
   }
@@ -242,7 +250,108 @@ a {
   }
 }
 
+.process-section {
+  padding: $side-padding;
+  margin: 5rem 0;
+  .process-heading {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
+.testimonial-section {
+  text-align: center;
+  padding: $side-padding;
+  margin: 5rem 0;
+  .heading {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+    p {
+      br {
+        display: none;
+      }
+    }
+  }
+
+  .testimonial-items {
+    margin: 2rem 0;
+    text-align: left;
+    display: grid;
+    gap: 2.5rem;
+    .testimonial-card {
+      border: 0.5px solid $border-color;
+      padding: 2rem;
+      background-color: hsl(30, 4%, 9%);
+      border-radius: 1px;
+      .logo {
+        margin-bottom: 1rem;
+      }
+      .label {
+        font-weight: 300;
+      }
+      .intru {
+        margin-top: 1rem;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        img {
+          height: 50px;
+          width: 50px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+        .name {
+          line-height: 1.5;
+          .company {
+            font-weight: 100;
+          }
+        }
+      }
+    }
+  }
+}
+
+footer {
+  padding: $side-padding;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  h2 {
+    margin-top: 1rem;
+    font-size: 3.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+  p {
+    br {
+      display: none;
+    }
+  }
+  button {
+    background-color: $text-color;
+    color: $bg-color;
+    text-transform: uppercase;
+    width: fit-content;
+    padding: 0.7rem 1rem;
+    text-align: center;
+    border: none;
+    letter-spacing: 1.9px;
+    margin: 0 auto;
+  }
+  .copy-rights {
+    font-size: 0.9rem;
+    opacity: 0.7;
+  }
+}
+
 @media (min-width: 1020px) {
+  h3 {
+    font-size: 4rem;
+  }
   .hero-section {
     img {
       width: 34%;
@@ -279,6 +388,43 @@ a {
     }
     .work-items {
       grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  .process-section {
+    .process-heading {
+      gap: 3.5rem;
+     
+      p {
+        font-size: 1.2rem;
+      }
+    }
+  }
+
+  .testimonial-section {
+    .heading {
+      p {
+        br {
+          display: block;
+        }
+      }
+    }
+    .testimonial-items {
+      padding: 0px 3%;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  footer {
+    h2 {
+      font-size: 7rem;
+    }
+    p {
+      font-size: 1.4rem;
+      line-height: 1.4;
+      br {
+        display: block;
+      }
     }
   }
 }
