--- a/Front-End/arik_portfolio_template/styles/style.scss
+++ b/Front-End/arik_portfolio_template/styles/style.scss
@@ -50,6 +50,10 @@ p {
   margin-top: 0.8rem;
   opacity: 0.8;
 }
+h2 {
+  font-weight: 300;
+  font-size: 2rem;
+}
 h3 {
   font-size: 3rem;
   font-weight: 300;
@@ -207,10 +211,6 @@ h4 {
     align-items: center;
     gap: 1rem;
     margin-bottom: 2rem;
-    h2 {
-      font-weight: 300;
-      font-size: 2.5rem;
-    }
   }
   .work-items {
     display: grid;
@@ -258,6 +258,92 @@ h4 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    p {
+      br {
+        display: none;
+      }
+    }
+  }
+  .process-items {
+    display: grid;
+    grid-template-columns: 0.5fr 6fr;
+    gap: 1rem;
+
+    .lines {
+      margin-top: 3rem;
+      display: flex;
+      flex-direction: column;
+      width: fit-content;
+      align-items: center;
+      gap: 1rem;
+      .sm-line {
+        width: 0.5px;
+        height: 15rem;
+        background-color: $text-color;
+      }
+      .count {
+        border: 0.5px solid $text-color;
+        padding: 0.44rem;
+        border-radius: 50%;
+        font-size: 0.9rem;
+      }
+      .lg-line {
+        width: 0.5px;
+        height: 100%;
+        background-color: $text-color;
+      }
+    }
+
+    .process-card-item {
+      margin-top: 6.6rem;
+      display: grid;
+      gap: 2rem;
+      .process-card {
+        background-color: #343330;
+        background-color: hsl(30, 4%, 9%);
+        border: 0.5px solid $border-color;
+        border-radius: 1px;
+        padding: 2rem;
+        .time {
+          margin-top: 0px;
+          background-color: $bg-color;
+          width: fit-content;
+          padding: 0.2rem 0.5rem;
+          border: 0.5px solid $border-color;
+          border-radius: 1px;
+          font-size: 0.6rem;
+          opacity: 0.6;
+          text-transform: uppercase;
+          font-weight: 500;
+          margin-bottom: 1rem;
+        }
+        h4 {
+          font-size: 0.8rem;
+          opacity: 0.6;
+          text-transform: uppercase;
+          line-height: 2;
+        }
+        h2 {
+          font-size: 1.4rem;
+          text-transform: uppercase;
+        }
+
+        ul {
+          margin-top: 1rem;
+          li {
+            padding: 0.3rem 0;
+            font-size: 1rem;
+            letter-spacing: 1.5px;
+            margin-left: 0.8rem;
+            line-height: 1.5;
+            font-weight: 200;
+          }
+        }
+      }
+    }
+    .right {
+      display: none;
+    }
   }
 }
 
@@ -394,9 +480,35 @@ footer {
   .process-section {
     .process-heading {
       gap: 3.5rem;
-     
       p {
         font-size: 1.2rem;
+        br {
+          display: block;
+        }
+      }
+    }
+    .process-items {
+      column-gap: 3rem;
+      grid-template-columns: 6fr 0.5fr 6fr;
+      grid-template-areas: "left lines right";
+      .left {
+        grid-area: left;
+      }
+      .lines {
+        grid-area: lines;
+      }
+      .right {
+        grid-area: right;
+      }
+      .right {
+        display: block;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        height: fit-content;
+      }
+      .lg-hide {
+        opacity: 0;
       }
     }
   }
