--- a/Front-End/fylla-template/styles/style.css
+++ b/Front-End/fylla-template/styles/style.css
@@ -33,25 +33,19 @@ h2 {
   font-family: "Syne", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-}
-
-h1 {
-  font-weight: 500;
-}
-
-h2 {
   font-weight: 500;
 }
 
 h3 {
-  font-weight: 300;
+  font-weight: 400;
+  font-size: 2rem;
 }
 
 .hero-section {
-  margin-top: 1rem;
-  width: 100%;
   display: flex;
   flex-direction: column;
+  margin-top: 1rem;
+  width: 100%;
   gap: 1rem;
 }
 .hero-section p {
@@ -71,9 +65,9 @@ h3 {
 }
 
 .our-values {
-  margin-top: 2rem;
   display: flex;
   flex-direction: column;
+  margin-top: 2rem;
   gap: 2rem;
 }
 .our-values p {
@@ -117,10 +111,81 @@ h3 {
   opacity: 0.6;
   letter-spacing: 0.05rem;
   line-height: 1.3;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
-.our-values .bottom-container .element h3 {
-  font-size: 2rem;
+
+.bottom-line {
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  margin: 2rem 0rem;
+}
+
+.our-team {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.our-team .top-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.our-team .top-container h3 {
+  text-transform: uppercase;
+}
+.our-team .top-container p {
+  font-size: 1rem;
+  opacity: 0.6;
+  letter-spacing: 0.05rem;
+  font-size: 1.3rem;
+  width: 70%;
+}
+.our-team .line {
+  width: 100%;
+  height: 1px;
+  background-color: black;
+}
+.our-team .bottom-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 1rem;
+}
+.our-team .bottom-container .top-container-team,
+.our-team .bottom-container .bottom-container-team {
+  width: 1005;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.our-team .bottom-container .top-container-team .team-member,
+.our-team .bottom-container .bottom-container-team .team-member {
+  width: 100%;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.our-team .bottom-container .top-container-team .team-member img,
+.our-team .bottom-container .bottom-container-team .team-member img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 1rem;
+}
+.our-team .bottom-container .top-container-team .team-member h4,
+.our-team .bottom-container .bottom-container-team .team-member h4 {
+  font-size: 1.5rem;
+  letter-spacing: 1.4px;
+  margin-top: 0.3rem;
+  font-weight: 400;
+}
+.our-team .bottom-container .top-container-team .team-member p,
+.our-team .bottom-container .bottom-container-team .team-member p {
+  font-size: 1rem;
+  opacity: 0.6;
+  letter-spacing: 0.05rem;
 }
 
 @media (min-width: 1020px) {
@@ -129,6 +194,11 @@ h3 {
   }
   .hero-section h1 {
     font-size: 7rem;
+  }
+  .hero-section img {
+    max-height: 40rem;
+    -o-object-position: top;
+       object-position: top;
   }
   .our-values {
     flex-direction: row;
@@ -153,5 +223,37 @@ h3 {
     width: 100%;
     height: 1px;
     align-self: stretch;
+  }
+  .bottom-line {
+    margin: 3rem 0rem;
+  }
+  .our-team {
+    flex-direction: row;
+  }
+  .our-team .top-container {
+    width: 35%;
+  }
+  .our-team .top-container .text {
+    position: sticky;
+    top: 0;
+  }
+  .our-team .top-container .text h3 {
+    font-size: 3rem;
+  }
+  .our-team .top-container .text p {
+    font-size: 1.4rem;
+    width: 90%;
+    line-height: 1.4;
+  }
+  .our-team .line {
+    height: initial;
+    width: 1px;
+  }
+  .our-team .bottom-container {
+    width: 65%;
+  }
+  .our-team .bottom-container .top-container-team,
+  .our-team .bottom-container .bottom-container-team {
+    flex-direction: row;
   }
 }/*# sourceMappingURL=style.css.map */
