--- a/Front-End/fylla-template/styles/style.scss
+++ b/Front-End/fylla-template/styles/style.scss
@@ -6,6 +6,17 @@
   letter-spacing: 0.05rem;
 }
 
+@mixin flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+@mixin line {
+  width: 100%;
+  height: 1px;
+  background-color: black;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -40,22 +51,18 @@ h2 {
   font-family: "Syne", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-}
-h1 {
   font-weight: 500;
 }
-h2 {
-  font-weight: 500;
-}
+
 h3 {
-  font-weight: 300;
+  font-weight: 400;
+  font-size: 2rem;
 }
 
 .hero-section {
+  @include flex-column;
   margin-top: 1rem;
   width: 100%;
-  display: flex;
-  flex-direction: column;
   gap: 1rem;
   p {
     @include light-font-weight;
@@ -73,9 +80,8 @@ h3 {
 }
 
 .our-values {
+  @include flex-column;
   margin-top: 2rem;
-  display: flex;
-  flex-direction: column;
   gap: 2rem;
   p {
     @include light-font-weight;
@@ -92,17 +98,13 @@ h3 {
     width: fit-content;
   }
   .line {
-    width: 100%;
-    height: 1px;
-    background-color: black;
+    @include line;
   }
   .bottom-container {
-    display: flex;
-    flex-direction: column;
+    @include flex-column;
     gap: 2rem;
     .element {
-      display: flex;
-      flex-direction: column;
+      @include flex-column;
       gap: 1rem;
       img {
         width: 3rem;
@@ -111,15 +113,67 @@ h3 {
       p {
         @include light-font-weight;
         line-height: 1.3;
-        font-size: 1.2rem;
-      }
-      h3 {
-        font-size: 2rem;
+        font-size: 1.1rem;
       }
     }
   }
 }
+.bottom-line {
+  @include line;
+  margin: 2rem 0rem;
+}
 
+.our-team {
+  @include flex-column;
+  gap: 2rem;
+  .top-container {
+    @include flex-column;
+    gap: 1rem;
+    h3 {
+      text-transform: uppercase;
+    }
+    p {
+      @include light-font-weight;
+      font-size: 1.3rem;
+      width: 70%;
+    }
+  }
+  .line {
+    @include line;
+  }
+
+  .bottom-container {
+    @include flex-column;
+    width: 100%;
+    gap: 1rem;
+    .top-container-team,
+    .bottom-container-team {
+      width: 1005;
+      @include flex-column;
+      gap: 2rem;
+      .team-member {
+        width: 100%;
+        align-self: stretch;
+        @include flex-column;
+        gap: 0.5rem;
+        img {
+          width: 100%;
+          object-fit: cover;
+          border-radius: 1rem;
+        }
+        h4 {
+          font-size: 1.5rem;
+          letter-spacing: 1.4px;
+          margin-top: 0.3rem;
+          font-weight: 400;
+        }
+        p {
+          @include light-font-weight;
+        }
+      }
+    }
+  }
+}
 // Desktop
 @media (min-width: 1020px) {
   main {
@@ -129,14 +183,17 @@ h3 {
     h1 {
       font-size: 7rem;
     }
+    img {
+      max-height: 40rem;
+      object-position: top;
+    }
   }
 
   .our-values {
     flex-direction: row;
     .top-container {
       width: 65%;
-      display: flex;
-      flex-direction: column;
+      @include flex-column;
       justify-content: space-between;
       h2 {
         font-size: 4.5rem;
@@ -154,6 +211,39 @@ h3 {
       width: 100%;
       height: 1px;
       align-self: stretch;
+    }
+  }
+  .bottom-line {
+    margin: 3rem 0rem;
+  }
+
+  .our-team {
+    flex-direction: row;
+    .top-container {
+      width: 35%;
+      .text {
+        position: sticky;
+        top: 0;
+        h3 {
+          font-size: 3rem;
+        }
+        p {
+          font-size: 1.4rem;
+          width: 90%;
+          line-height: 1.4;
+        }
+      }
+    }
+    .line {
+      height: initial;
+      width: 1px;
+    }
+    .bottom-container {
+      width: 65%;
+      .top-container-team,
+      .bottom-container-team {
+        flex-direction: row;
+      }
     }
   }
 }
