--- a/Front-End/fylla-template/styles/style.css
+++ b/Front-End/fylla-template/styles/style.css
@@ -188,6 +188,58 @@ h3 {
   letter-spacing: 0.05rem;
 }
 
+.contact {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+  gap: 1.5rem;
+}
+.contact .top-container .text {
+  margin-top: 1.5rem;
+}
+.contact .top-container .text p {
+  font-size: 1rem;
+  opacity: 0.6;
+  letter-spacing: 0.05rem;
+}
+.contact .top-container .text h2 {
+  font-size: 2.7rem;
+  padding: 1rem 0;
+  text-transform: uppercase;
+}
+.contact .top-container img {
+  width: 3rem;
+  aspect-ratio: 1/1;
+}
+.contact .line {
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  display: none;
+}
+.contact .bottom-container .element {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.contact .bottom-container .element p {
+  font-size: 1rem;
+  opacity: 0.6;
+  letter-spacing: 0.05rem;
+  line-height: 1.3;
+  font-size: 1.1rem;
+}
+.contact .bottom-container .element button {
+  background-color: black;
+  color: hsla(48, 63%, 97%, 0.885);
+  padding: 0.45rem 1.3rem;
+  border-radius: 0.4rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-weight: 500;
+  letter-spacing: 1.3px;
+}
+
 @media (min-width: 1020px) {
   main {
     padding: 3rem;
@@ -255,5 +307,37 @@ h3 {
   .our-team .bottom-container .top-container-team,
   .our-team .bottom-container .bottom-container-team {
     flex-direction: row;
+  }
+  .contact {
+    flex-direction: row;
+    min-height: 75vh;
+    gap: 1.5rem;
+  }
+  .contact .top-container {
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .contact .top-container .text {
+    order: -1;
+  }
+  .contact .top-container .text h2 {
+    font-size: 4.5rem;
+    width: 80%;
+  }
+  .contact .line {
+    display: block;
+    height: initial;
+    width: 1px;
+  }
+  .contact .bottom-container .element {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+  .contact .bottom-container .element p {
+    font-size: 1.4rem;
   }
 }/*# sourceMappingURL=style.css.map */
