--- a/Front-End/fylla-template/styles/style.css
+++ b/Front-End/fylla-template/styles/style.css
@@ -86,6 +86,8 @@ h3 {
   border-radius: 0.4rem;
   width: -moz-fit-content;
   width: fit-content;
+  font-weight: 500;
+  letter-spacing: 1.3px;
 }
 .our-values .line {
   width: 100%;
@@ -240,6 +242,63 @@ h3 {
   letter-spacing: 1.3px;
 }
 
+.footer {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+.footer .top-container p {
+  font-size: 1rem;
+  opacity: 0.6;
+  letter-spacing: 0.05rem;
+  line-height: 1.3;
+}
+.footer .bottom-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.footer .bottom-container h3 {
+  font-family: "Syne", sans-serif;
+}
+.footer .bottom-container .nav-items {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-transform: uppercase;
+  margin-top: 1.3rem;
+}
+.footer .bottom-container .nav-items p {
+  font-size: 1rem;
+  opacity: 0.6;
+  letter-spacing: 0.05rem;
+}
+.footer .bottom-container button {
+  background-color: black;
+  color: hsla(48, 63%, 97%, 0.885);
+  padding: 0.45rem 1.3rem;
+  border-radius: 0.4rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-weight: 500;
+  letter-spacing: 1.3px;
+}
+.footer .line {
+  width: 100%;
+  height: 1px;
+  background-color: black;
+}
+
+.copy-right p {
+  font-size: 1rem;
+  opacity: 0.6;
+  letter-spacing: 0.05rem;
+  opacity: 1;
+  text-align: center;
+  line-height: 1.8;
+}
+
 @media (min-width: 1020px) {
   main {
     padding: 3rem;
@@ -339,5 +398,33 @@ h3 {
   }
   .contact .bottom-container .element p {
     font-size: 1.4rem;
+  }
+  .footer {
+    flex-direction: row;
+  }
+  .footer .top-container {
+    width: 35%;
+  }
+  .footer .line {
+    height: initial;
+    width: 1px;
+  }
+  .footer .bottom-container {
+    width: 65%;
+    flex-direction: row;
+    gap: 1rem;
+  }
+  .footer .bottom-container .pages,
+  .footer .bottom-container .cms,
+  .footer .bottom-container .utility-pages {
+    flex: 1;
+  }
+  .footer .bottom-container .line {
+    display: none;
+  }
+  .copy-right {
+    display: flex;
+    justify-content: space-between;
+    line-height: 1;
   }
 }/*# sourceMappingURL=style.css.map */
