--- a/Front-End/fylla-template/styles/style.scss
+++ b/Front-End/fylla-template/styles/style.scss
@@ -23,6 +23,8 @@
   padding: 0.45rem 1.3rem;
   border-radius: 0.4rem;
   width: fit-content;
+  font-weight: 500;
+  letter-spacing: 1.3px;
 }
 
 * {
@@ -217,12 +219,54 @@ h3 {
       }
       button {
         @include primary-btn;
-        font-weight: 500;
-        letter-spacing: 1.3px;
       }
     }
   }
 }
+
+.footer {
+  @include flex-column;
+  gap: 2rem;
+  margin-top: 2rem;
+  .top-container {
+    p {
+      @include light-font-weight;
+      line-height: 1.3;
+    }
+  }
+  .bottom-container {
+    @include flex-column;
+    gap: 2rem;
+    h3 {
+      font-family: "Syne", sans-serif;
+    }
+    .nav-items {
+      @include flex-column;
+      gap: 1rem;
+      text-transform: uppercase;
+      margin-top: 1.3rem;
+      p {
+        @include light-font-weight;
+      }
+    }
+    button {
+      @include primary-btn;
+    }
+  }
+  .line {
+    @include line;
+  }
+}
+
+.copy-right {
+  p {
+    @include light-font-weight;
+    opacity: 1;
+    text-align: center;
+    line-height: 1.8;
+  }
+}
+
 // Desktop
 @media (min-width: 1020px) {
   main {
@@ -327,5 +371,34 @@ h3 {
         }
       }
     }
+  }
+
+  .footer {
+    flex-direction: row;
+    .top-container {
+      width: 35%;
+    }
+    .line {
+      height: initial;
+      width: 1px;
+    }
+    .bottom-container {
+      width: 65%;
+      flex-direction: row;
+      gap: 1rem;
+      .pages,
+      .cms,
+      .utility-pages {
+        flex: 1;
+      }
+      .line {
+        display: none;
+      }
+    }
+  }
+  .copy-right {
+    display: flex;
+    justify-content: space-between;
+    line-height: 1;
   }
 }
