--- a/Front-End/interactive-responsive-project/styles/style.scss
+++ b/Front-End/interactive-responsive-project/styles/style.scss
@@ -26,12 +26,11 @@ main {
 // Hero Section
 .hero-section {
   padding: 0 1.2rem;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 2rem;
   .top-section {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     gap: 1.2rem;
     h1 {
       font-size: 2rem;
@@ -87,19 +86,86 @@ main {
   }
 }
 
+// Top Destination
+
+.top-destination {
+  margin-top: 5rem;
+  padding: 0 1.2rem;
+  display: grid;
+  gap: 1rem;
+  .top-section {
+    h2 {
+      font-size: 2rem;
+    }
+    .places {
+      line-height: 2;
+      display: flex;
+      gap: 1rem;
+
+      p {
+        opacity: 0.8;
+        display: none;
+      }
+      button {
+        border: none;
+        background: none;
+        padding: 0.3rem 0;
+        font-size: 1.4rem;
+        font-weight: 600;
+        letter-spacing: 1.1px;
+        width: fit-content;
+        margin-top: 0.5rem;
+      }
+    }
+  }
+  .bottom-section {
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scrollbar-width: none;
+    .image-cards {
+      display: flex;
+      gap: 1rem;
+      .cards {
+        width: 15rem;
+        aspect-ratio: 1/1;
+        flex-shrink: 0;
+        scroll-snap-align: start;
+        display: flex;
+        flex-direction: column;
+        img {
+          object-fit: cover;
+          aspect-ratio: 1/1.3;
+          border-radius: 1rem;
+        }
+        .text {
+          h3 {
+            font-size: 1rem;
+            font-weight: 600;
+          }
+          p {
+            opacity: 0.8;
+          }
+        }
+      }
+    }
+  }
+}
+
 // Responsive
 @media (min-width: 1020px) {
   .hero-section {
     padding: 0 3rem;
-    flex-direction: row;
-    justify-content: center;
+    grid-template-columns: 1fr 1fr;
     width: 100%;
-    gap: 2rem;
     .top-section {
       width: 90%;
-      justify-content: center;
+      align-items: center;
+      gap: 0rem;
       h1 {
         font-size: 5rem;
+      }
+      p {
+        font-size: 1.3rem;
       }
     }
     .bottom-section {
@@ -113,11 +179,28 @@ main {
         "a a b b"
         "a a c c"
         ". . c c";
+      img {
+        height: 100%;
+        width: 100%;
+        aspect-ratio: 1/1.1;
+      }
     }
-    img {
-      height: 100%;
-      width: 100%;
-      aspect-ratio: 1/1.2;
+  }
+
+  .top-destination {
+    padding: 0 3rem;
+    .top-section {
+      .places {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        p {
+          display: block;
+        }
+        button{
+          margin: 0;
+        }
+      }
     }
   }
 }
