--- a/Front-End/interactive-responsive-project/styles/style.css
+++ b/Front-End/interactive-responsive-project/styles/style.css
@@ -139,6 +139,86 @@ main {
   opacity: 0.8;
 }
 
+.latest-story {
+  margin-top: 4rem;
+  padding: 0 1.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.latest-story .top-section h2 {
+  font-size: 2rem;
+}
+.latest-story .top-section button {
+  display: none;
+}
+.latest-story .bottom-section {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.latest-story .bottom-section .top-story {
+  display: flex;
+  flex-direction: column;
+}
+.latest-story .bottom-section .top-story img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 1rem;
+}
+.latest-story .bottom-section .top-story .content h4 {
+  font-size: 1.2rem;
+}
+.latest-story .bottom-section .top-story .content p {
+  font-size: 0.6rem;
+  opacity: 0.8;
+}
+.latest-story .bottom-section .top-story .content .text {
+  margin-top: 0.5rem;
+  opacity: 1;
+  font-size: 0.85rem;
+  line-height: 1.3;
+}
+.latest-story .bottom-section .bottom-stories {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.latest-story .bottom-section .bottom-stories .story-card {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+.latest-story .bottom-section .bottom-stories .story-card img {
+  width: 8rem;
+  aspect-ratio: 1/1;
+  flex-basis: 1;
+  border-radius: 1rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.latest-story .bottom-section .bottom-stories .story-card .text {
+  flex-basis: 2;
+}
+.latest-story .bottom-section .bottom-stories .story-card .text h4 {
+  font-size: 1.2rem;
+}
+.latest-story .bottom-section .bottom-stories .story-card .text p {
+  font-size: 0.6rem;
+  opacity: 0.8;
+}
+.latest-story button {
+  margin-top: 2rem;
+  display: block;
+  background: none;
+  padding: 0.8rem 2rem;
+  border: 0.5px solid gray;
+  border-radius: 20rem;
+}
+
 @media (min-width: 1020px) {
   .hero-section {
     padding: 0 3rem;
@@ -168,6 +248,10 @@ main {
   .top-destination {
     padding: 0 3rem;
   }
+  .top-destination .top-section h2 {
+    font-size: 3rem;
+    line-height: 2;
+  }
   .top-destination .top-section .places {
     display: flex;
     align-items: center;
@@ -178,5 +262,45 @@ main {
   }
   .top-destination .top-section .places button {
     margin: 0;
+  }
+  .latest-story {
+    padding: 0 3rem;
+    width: 100%;
+  }
+  .latest-story .top-section {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .latest-story .top-section button {
+    margin-top: 0;
+    display: block;
+    background: none;
+    padding: 0.5rem 1rem;
+    border: 0.5px solid gray;
+    border-radius: 20rem;
+  }
+  .latest-story .bottom-section {
+    flex-direction: row;
+  }
+  .latest-story .bottom-section .top-story {
+    width: 50%;
+  }
+  .latest-story .bottom-section .top-story .content h4 {
+    font-size: 2rem;
+  }
+  .latest-story .bottom-section .bottom-stories {
+    width: 50%;
+  }
+  .latest-story .bottom-section .bottom-stories .story-card .text h4 {
+    font-size: 1.4rem;
+  }
+  .latest-story .bottom-section .bottom-stories .story-card .text p {
+    font-size: 1rem;
+  }
+  .latest-story button {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
