--- a/HTML-CSS/Erikk-template/styles/style.css
+++ b/HTML-CSS/Erikk-template/styles/style.css
@@ -362,6 +362,19 @@ p {
   opacity: 0.7;
 }
 
+.join-the-team .top-container {
+  display: none;
+}
+.join-the-team .bottom-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.join-the-team .bottom-container .link {
+  display: flex;
+  gap: 0.7rem;
+}
+
 @media (min-width: 768px) {
   main {
     padding: 4rem;
@@ -524,6 +537,17 @@ p {
   }
   .team .bottom-container .team-member .profession .social img {
     width: 1.5rem;
+  }
+  .join-the-team {
+    display: flex;
+    gap: 3rem;
+  }
+  .join-the-team .top-container {
+    display: block;
+    width: 50%;
+  }
+  .join-the-team .bottom-container {
+    width: 50%;
   }
 }
 @media (min-width: 1020px) {
