--- a/HTML-CSS/Erikk-template/styles/style.scss
+++ b/HTML-CSS/Erikk-template/styles/style.scss
@@ -370,6 +370,14 @@ p {
   }
 }
 
+// footer
+footer {
+  background-color: #111;
+  text-align: center;
+  color: #fff;
+  padding: 2rem 0;
+}
+
 // Responsive
 
 @media (min-width: 768px) {
